# VIBE-AGENT-FRAMEWORK-WORKFLOW

./: .dockerignore  .env  .env.example  .gitignore  ACA_DEPLOYMENT_IMPLEMENTATION.md  ACA_DEPLOYMENT_QUICKREF.md  DEPLOYMENT_GUIDE.md  Dockerfile  FOUNDRY_ACCESS_QUICKREF.md  GITHUB_ACTIONS_OIDC_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FOUNDRY_ACCESS.md  MANUAL_CONFIGURATION_STEPS.md  QUICKSTART.md  README.md  WEATHER_AGENT_PLAN.md  WEBSITE_SUMMARIZER_IMPLEMENTATION.md  WEBSITE_SUMMARIZER_PLAN.md  WEBSITE_SUMMARIZER_QUICKREF.md  azure.yaml  pyproject.toml
.github/workflows/: aca-deploy.yml  deploy-to-aca.yml
examples/: README.md  simple_weather_example.py  website_summarizer_example.py
infra/: abbreviations.json  main.bicep  main.json  main.parameters.json
infra/modules/: container-app.bicep  container-app.json  container-apps-environment.bicep  container-apps-environment.json  container-registry.bicep  container-registry.json  foundry-role-assignment-rg.bicep  foundry-role-assignment.bicep  log-analytics.bicep  log-analytics.json
src/joker_agent/: agent.py  get_content_agent.py  run.py  run_weather_agent.py  run_website_summarizer.py  summarize_content_agent.py  weather_agent.py  website_summarizer_workflow.py
